--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@
 
         <section class="footer">
             <p>Copyright © 2025 John Doe. All Rights Reserved.</p>
-            <p>Developed by <a href="https://github.com/webdev-n" target="_blank" rel="noopener noreferrer">NASIMA
-                    AKTER</a></p>
+            <p>Developed by <a href="https://github.com/webdev-n" target="_blank" rel="noopener noreferrer">ASMA UL HOSNA</a></p>
         </section>
     </footer>
 
